--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,10 @@ install:
   - pip install -r requirements.txt
 script:
   - nosetests -v --with-coverage --cover-package=pong
+env: "SDL_VIDEODRIVER=dummy SDL_AUDIODRIVER=disk",
+before_install: [
+    "sudo apt-get update",
+    "sudo apt-get install python-dev libsdl-image1.2-dev libsdl-mixer1.2-dev libsdl-ttf2.0-dev libsdl1.2-dev libsmpeg-dev python-numpy libportmidi-dev ffmpeg libswscale-dev libavformat-dev libavcodec-dev libjpeg-dev libtiff4-dev libx11-6 libX11-dev xfonts-base xfonts-100dpi xfonts-75dpi xfonts-cyrillic"
+  ],
 after_success:
   - coveralls
